<resources>
    <string name="app_other">Other</string>
    <string name="app_loss_attachment">Loss of Attachment</string>
    <string name="app_general_info">General Information</string>
    <string name="app_name">Si Semut</string>
    <string name="app_dentition_status">Dentition Status</string>
    <string name="project_name_example">Survey Sardjito</string>
    <string name="action_sign_in_short">Register</string>
    <string name="hint_name">Enter your Name</string>
    <string name="hint_email">Enter your Email</string>
    <string name="hint_password">Enter your Password</string>
    <string name="hint_password_confirm">Confirm your Password</string>
    <string name="empty_email">Email address cant be null</string>
    <string name="empty_password">Password cant be null</string>
    <string name="empty_password_confirm">Password Confirmation cant be null</string>
    <string name="empty_name">Name cant be null</string>
    <string name="empty_form">Form cant be null</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="minimum_password_confirm">Password Confirmation too short, enter minimum 6 characters!</string>
    <string name="different_password">Password confirmation doesnt match!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="btn_link_to_register">Dont have an account? Sign Up</string>
    <string name="btn_link_to_login">Already have an account? Sign In</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="btn_signin">Sign In</string>
    <string name="btn_signup">Sign Up</string>
    <string name="btn_loading">Loading...</string>
    <string name="btn_success">Success</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
